# Secure-Data

./: pyproject.toml  requirements.txt
secure_data/: main.py  pyproject.toml
