[project]
name = "secure-data"
version = "0.1.0"
description = "A secure data encryption Streamlit app"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = [
    "streamlit>=1.45.0",
    "cryptography>=42.0.0"
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
